# scrobblr

./: .dockerignore  .env.docker.example  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  devenv.nix  devenv.yaml  docker-compose.yml  justfile  package.json  turbo.json
.cargo/: config.toml
.sqlx/: query-019339d26464f2ad590548419db338618efb403e129379b816d0ece92c8debb0.json  query-0316b37d33e613cbafdac999dd822cfbb1e02ae08abc592751ffd224731f038a.json  query-04229eaff6d1edf0e0287f703b7200367ce8a8a0047a8945f5d60b8a9af3a5b8.json  query-07aeb640c3a60bd7e07f72efcc8807c317b0a87f41d64adc9f5b98d2b210edef.json  query-08945a20e79a6182879c43bf459afdceeba7c22d7b27087e9c084dc64a1d56dd.json  query-0e35c973016b43d645b7e160881c479c64e9a8e8015cb5150cfe5c0817cb6969.json  query-161fcab84cd744e9af5a1932ef4fb2e787d12989183e33763f26b51457ebd93a.json  query-17d5767d946e510655d669ef630162df3d61cfd722a8b8a04ca4da5d900fdf28.json  query-1d3a247a15743bb57657c04c03a35edc3dc2edc588dc9436358d270e7d45d798.json  query-1d71865d8c69092d298a043e86db4bf3fee8bd9a06c96108f8c623f5063b0ac0.json  query-1e282f594ef428c0b0a8ad464563fe5cdc614bb22e2fef3e0e24330f0c92d274.json  query-1fdc81463d61a4b7e189472bf34dc08dadecf50329a195b2301b8f45daf9b098.json  query-207d2656293295efbddd59609232d4d211a5ef9d6985d182eb3c8e0181404bd8.json  query-21f2080455d5020a0b5661a47b1c84b7692bbbfefd34718b5c29bf73669cf52f.json  query-2735cd100a420fa27462533b205b458f306a1197d584bc9b33ff5497ca0f170d.json  query-28da6995c9d6f77de2e0d71e78e655c20132a35f430080ac85ede64782b9612f.json  query-2c1ff7548fe399ae06099dae886a89f54e541484d98a307dcc197fcf5c296704.json  query-2c48d5a94d1c918e6d404ca536b1f9e8a3783515a880c708c88afea506f29470.json  query-2e37dd88316d9721609b0a01795a83699bb1bd6c881edacac21d72926dd81475.json  query-31e3fa593ccc678f5b022323563fc4a7e7820160e961118d12c9419a854833a1.json  query-368012dfccce701ee580f36e23ec1fed29b1be636a9feb921e48a9f4d483c00f.json  query-3766aadb33cfdd22828e862b18b71d8583e3437fda2819c4c1f44176ac8ac379.json  query-3c08f53b41192e4f664d4716f634b6cfe5a80eccdc9147cf8f579e01865088a9.json  query-41770c4276822a013fd307f7964a441aef3e8379d0e0f97cde413d671b538988.json  query-41c5e1f097b8935d9b9502d477d98e97d4acee5206ac43114d4cf8fb7aa53394.json  query-428f1ec30010f84d28df3d284f77c14ba1d2e6cbe7ae08adfcef881bc844ef34.json  query-438c53ab2ebb7b5f258844253c4e15ee567d1398ffd8675b17ef57a7462369af.json  query-49b6444ab3aa1316b02fbbb4d254ecac96a054934fa1c27bfc915c0e0aeb70cc.json  query-4a5701ae470c50d5ec2cde1249795ae029a2c91eb967510389c15fc3f79bc4c3.json  query-4a70bb14fd0f467afdba07b1361aaffe3825f5955f7f83a71e81deb329c6a9ca.json  query-4ae3e41786836e4d867f8a0db60964bbc1ba4ff785a9fd8feae3d998246ad44f.json  query-4c0105455520949124b2dfe78a2f35fe5fec5e492b26f42c748a5600b63fd977.json  query-4d0859b47a80a46120aead7a032b4ca0998bf34299fa40862db34b582af45ea3.json  query-52fb28a1d265a8f031b09e074ad0b8756a404e5c77d2e1db4878a8a4e85d5d93.json  query-53ad6bfe8b7182c4c0ebef706f5215e722c14673dfb8f37e12da15007b9becbd.json  query-5507f43ed8762a5ffa67cab9dc4e4eec6264d33df13fcd7ce674f529e29ea62a.json  query-58e9ac56bf5ff6f130ec90528bcf55350d8a10f442a9c39143e92d27fe8876c5.json  query-62132f8453543bc23fb69a6e3fd7ca46dfc86b2ef875cec1027e065ae996c67b.json  query-63762ee4bb53d9b35b05ba165bc6c2deea40137272bb2270f2064bb38220dd26.json  query-67e630b4224dd1d496eb68bc6707efd130b4e84b6227b1ee09f31139651eefa3.json  (+48 more)
crates/api/: Cargo.toml  package.json
crates/api/src/: errors.rs  main.rs  router.rs  state.rs
crates/api/src/handlers/: auth.rs  community.rs  connected_accounts.rs  mod.rs  scrobbles.rs  tracks.rs  uploads.rs  users.rs
crates/api/src/middleware/: auth.rs  mod.rs  rate_limit.rs  visibility.rs
crates/db/: Cargo.toml
crates/db/src/: pool.rs
crates/db/src/queries/: auth.rs  community.rs  connected_accounts.rs  enrichment.rs  mod.rs  scrobbles.rs  tracks.rs  users.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  models.rs  scrobble.rs  spotify.rs  user.rs
crates/worker/: Cargo.toml  package.json
crates/worker/src/: connected_accounts.rs  main.rs
crates/worker/src/enrichment/: mod.rs  ratelimit.rs
crates/worker/src/enrichment/providers/: coverart.rs  deezer.rs  lastfm.rs  mod.rs  musicbrainz.rs
migrations/: 0001_initial.sql  0002_enrichment.sql  0003_uploads.sql  (+3 more)
(+1 files in other folders)
